[package]
name = "tracing-timing-graph"
version = "0.1.0"
authors = ["Guillaume Fraux <guillaume@fraux.fr>"]
edition = "2018"

[[bench]]
name = "emtpy-spans"
harness = false

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.2"
quanta = "0.7"
petgraph = "0.5"
term-table = "1.3"
json = "0.12"
parking_lot = "0.11"

[dev-dependencies]
criterion = {version = "0.3", features = ["html_reports"]}
once_cell = "1"
